<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_tests</name>
  <version>0.1.0</version>
  <description>Configs and launch files for ff tests</description>
  <maintainer email="mayukh.ghosh@u.nus.edu">Mayukh Ghosh</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>free_fleet_adapter</exec_depend>
  <exec_depend>rmf_demos</exec_depend>
  <exec_depend>ff_tests_maps</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>